// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a snapshot summary 1`] = `
"<bold>Snapshot Summary</intensity>
<bold><green> › 1 snapshot written </color></intensity>from 1 test suite.
<bold><red> › 1 snapshot failed</color></intensity> from 1 test suite. <dim>Inspect your code changes or press --u to update them.</intensity>
<bold><green> › 1 snapshot updated </color></intensity>from 1 test suite.
<bold><yellow> › 1 snapshot file obsolete </color></intensity>from 1 test suite. <dim>To remove it, press --u.</intensity>
<bold><yellow> › 1 snapshot obsolete </color></intensity>from 1 test suite. <dim>To remove it, press --u.</intensity>
   ↳ <dim>../path/to/</intensity><bold>suite_one</intensity>
       • unchecked snapshot 1"
`;

exports[`creates a snapshot summary after an update 1`] = `
"<bold>Snapshot Summary</intensity>
<bold><green> › 1 snapshot written </color></intensity>from 1 test suite.
<bold><red> › 1 snapshot failed</color></intensity> from 1 test suite. <dim>Inspect your code changes or press --u to update them.</intensity>
<bold><green> › 1 snapshot updated </color></intensity>from 1 test suite.
<bold><green> › 1 snapshot file removed </color></intensity>from 1 test suite.
<bold><green> › 1 snapshot removed </color></intensity>from 1 test suite.
   ↳ <dim>../path/to/</intensity><bold>suite_one</intensity>
       • unchecked snapshot 1"
`;

exports[`creates a snapshot summary with multiple snapshot being written/updated 1`] = `
"<bold>Snapshot Summary</intensity>
<bold><green> › 2 snapshots written </color></intensity>from 2 test suites.
<bold><red> › 2 snapshots failed</color></intensity> from 2 test suites. <dim>Inspect your code changes or press --u to update them.</intensity>
<bold><green> › 2 snapshots updated </color></intensity>from 2 test suites.
<bold><yellow> › 2 snapshot files obsolete </color></intensity>from 2 test suites. <dim>To remove them all, press --u.</intensity>
<bold><yellow> › 2 snapshots obsolete </color></intensity>from 2 test suites. <dim>To remove them all, press --u.</intensity>
   ↳ <dim>../path/to/</intensity><bold>suite_one</intensity>
       • unchecked snapshot 1
   ↳ <dim>../path/to/</intensity><bold>suite_two</intensity>
       • unchecked snapshot 2"
`;

exports[`returns nothing if there are no updates 1`] = `"<bold>Snapshot Summary</intensity>"`;
